--- a/composer.json
+++ b/composer.json
@@ -21,5 +21,5 @@
             "GeorgRinger\\ExtemconfValidator\\": "src"
         }
     },
-    "bin": ["emconf-validate"],
+    "bin": ["emconf-validate"]
 }
